--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "rollup": "^4.40.0"
   },
   "scripts": {
-    "dev": "concurrently \"rollup -c --watch\" \"gulp\"",
-    "start": "concurrently \"rollup -c --watch\" \"node \\\"C:/Program Files/Foundry Virtual Tabletop V12/resources/app/main.js\\\" --dataPath=\\\"C:/Program Files/Foundry Virtual Tabletop V12/resources/app\\\" --noupnp\" \"gulp\"",
-    "start-test": "node \"C:/Program Files/Foundry Virtual Tabletop V12/resources/app/main.js\" --dataPath=\"C:/Program Files/Foundry Virtual Tabletop V12/resources/app\" && rollup -c --watch && gulp",
+    "start": "concurrently \"rollup -c --watch\" \"node ../../../../FoundryDev/main.js --dataPath=../../../  --noupnp\"  \"gulp\"",
+    "start-test": "node ./resources/app/main.js --dataPath=./ && rollup -c --watch && gulp",
     "build": "npm run rollup && npm run gulp",
     "rollup": "rollup -c",
     "gulp": "gulp less",
